// Generated by: gen-go-to-protobuf
syntax = "proto3";
package github.com.jetstack.cert_manager.pkg.apis.meta.v1;
option  go_package = "github.com/jetstack/cert-manager/pkg/apis/meta/v1";

import "kube.proto";

enum ConditionStatus {
  CONDITION_STATUS_TRUE    = 0;
  CONDITION_STATUS_FALSE   = 1;
  CONDITION_STATUS_UNKNOWN = 2;
}

message LocalObjectReference {
  // Name of the resource being referred to.
  // More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
  string name = 1 [(dev.f110.kubeproto.field) = { go_name: "Name", api_field_name: "name", inline: false }];
}

message ObjectReference {
  // Name of the resource being referred to.
  string name = 1 [(dev.f110.kubeproto.field) = { go_name: "Name", api_field_name: "name", inline: false }];
  // Kind of the resource being referred to.
  optional string kind = 2 [(dev.f110.kubeproto.field) = { go_name: "Kind", api_field_name: "kind", inline: false }];
  // Group of the resource being referred to.
  optional string group = 3 [(dev.f110.kubeproto.field) = { go_name: "Group", api_field_name: "group", inline: false }];
}

message SecretKeySelector {
  // The name of the Secret resource being referred to.
  LocalObjectReference local_object_reference = 1 [(dev.f110.kubeproto.field) = { go_name: "LocalObjectReference", inline: true }];
  // The key of the entry in the Secret resource's `data` field to be used.
  // Some instances of this field may be defaulted, in others it may be
  // required.
  optional string key = 2 [(dev.f110.kubeproto.field) = { go_name: "Key", api_field_name: "key", inline: false }];
}
